--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <!-- Our js bundle will be in 'bundle.js' -->
   <!-- The 'defer' attribute will ensure that it is run only after the DOM finishes loading -->
 
-  <script src="files/bundle.js" defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://use.fontawesome.com/9e09b38d59.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Halant|Shrikhand" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="../bundle.js" defer></script>
+
   <!-- <link href='/bootstrap/dist/css/bootstrap-theme.css' />
   <link href='/bootstrap/dist/css/bootstrap-theme.min.css' />
   <link href='/bootstrap/dist/css/bootstrap.css' />
