--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href='/bootstrap/dist/css/bootstrap-theme.min.css' />
   <link href='/bootstrap/dist/css/bootstrap.css' />
   <link href='/bootstrap/dist/css/bootstrap.min.css' /> -->
-  <script src="files/bundle.js" defer></script>
+  <script src="../bundle.js" defer></script>
 </head>
 <body>
   <!-- We will render our React app into a div with an id of 'app' -->
